--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_smartcoop"
+        android:icon="@drawable/icon_smartcoop_jabar"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon_smartcoop"
+        android:roundIcon="@drawable/icon_smartcoop_jabar"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
+            android:hardwareAccelerated="true"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
